--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
-  "twrp_branch": "twrp-8.1",
-  "git_username": "voipsy",
-  "git_email": "37921907+voipsy@users.noreply.github.com",
-  "use_own_dt": true,
-  "dt_url": "azwhikaru/twrp_device_xiaomi_babel",
-  "dt_branch": "main",
-  "dt_remote": "github",
-  "dt_path": "device/xiaomi/Babel",
-  "device_code": "Babel",
+  "twrp_branch": "twrp-9.0",
+  "git_username": "lzhzy597",
+  "git_email": "37921907+lzhzy597@users.noreply.github.com",
+  "use_own_dt": false,
+  "dt_url": "",
+  "dt_branch": "",
+  "dt_remote": "",
+  "dt_path": "",
+  "device_code": "wayne",
   "use_omin_head": true,
   "use_repair_manifest": false,
   "fix_product": false,
   "fix_misscom": false,
   "fix_busybox": false,
-  "fix_branch": "android-10.0"
+  "fix_branch": "android-9.0"
 }
