--- a/config.json
+++ b/config.json
@@ -7,9 +7,9 @@
   "dt_url": "",
   "dt_branch": "",
   "dt_remote": "",
-  "dt_path": "",
+  "dt_path": "device/xiaomi/wayne",
   "device_code": "wayne",
-  "use_omin_head": true,
+  "use_omin_head": false,
   "use_repair_manifest": false,
   "fix_product": false,
   "fix_misscom": false,
